src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Properties_Managed_Residential__c</fullName>
        <label># Properties Managed (Residential)</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Selected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this contractor in Property Management?</description>
        <label>Property Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <picklist>
            <controllingField>Market_Sub_Segment__c</controllingField>
            <picklistValues>
                <fullName>Commercial: Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial: Government/Municipality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial: Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial: Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial: Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial: Office/Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial: Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential: Multi-family Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential: Single Family Homes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publication_Name__c</fullName>
        <label>Publication Name</label>
        <picklist>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durability &amp; Design</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RPSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RPSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <description>SMARTLEAD reference number</description>
        <label>Reference Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remodeler__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this contractor a remodeler?</description>
        <label>Remodeler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restoration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restoration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_sales_revenue__c</fullName>
        <label>Retail sales revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_detected__c</fullName>
        <formula>IF( CC_plus_DTP__c  =  0 , &quot;Zero&quot;, &quot;Revenue&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue detected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rolling_Year_CC_plus_DTP__c</fullName>
        <description>Rolling Year CC plus DTP</description>
        <formula>CC_Rolling_Year1__c + DTP_Rolling_Year1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals Rolling Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Number__c</fullName>
        <label>SAP Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_History_of_Year__c</fullName>
        <label>Sales History of Year_______</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Volume_Range__c</fullName>
        <label>Sales Volume Range</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_consultation_service_promoter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Painting Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_revenue_by_brand_1__c</fullName>
        <label>Brand 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_revenue_by_brand_2__c</fullName>
        <label>Brand 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_revenue_by_brand_3__c</fullName>
        <label>Brand 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_SIC_1__c</fullName>
        <label>Secondary SIC #1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_SIC_2__c</fullName>
        <label>Secondary SIC #2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_SIC_Description_1__c</fullName>
        <label>Secondary SIC Description #1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_SIC_Description_2__c</fullName>
        <label>Secondary SIC Description #2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_SIC_Code__c</fullName>
        <label>Selected_SIC_Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_SIC_Desc__c</fullName>
        <label>Selected_SIC_Desc</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Revenue__c</fullName>
        <description>Rollup of the shared revenue to report accounts over 100%</description>
        <label>Shared Revenue %</label>
        <summarizedField>Commission__c.Percent_of_Sale__c</summarizedField>
        <summaryForeignKey>Commission__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specialty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stains__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chongqing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gansu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangdong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guizhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hainan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heilongjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jilin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liaoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nei Mongol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ningxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qinghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shaanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shandong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sichuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tianjin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tibet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xinjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yunnan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store Type</label>
        <picklist>
            <picklistValues>
                <fullName>THD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Lead_Source__c</fullName>
        <label>Sub-Lead Source</label>
        <picklist>
            <controllingField>Lead_Source__c</controllingField>
            <picklistValues>
                <fullName>Contractor Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD Pro Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rep Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTP Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Magazine Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web to Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BehrPro Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Trade Association/Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Walk In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TGP__c</fullName>
        <label>TGP</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>THD_Home_Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>THD store account originally signed up in.</description>
        <inlineHelpText>THD location account initially signed up.</inlineHelpText>
        <label>THD Home Store</label>
        <referenceTo>Home_Depot_Store__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>THD_Pilot_Programs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>THD Pilot Programs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TYTD_C_C_plus_DTP__c</fullName>
        <description>TYTD C&amp;C plus DTP</description>
        <formula>CC_TYTD1__c + DTP_TYTD1__c</formula>
        <label>Total Actuals TYTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TYTD_vs_LYTD__c</fullName>
        <formula>If(LYTD_C_C_plus_DTP__c=0,0,( TYTD_C_C_plus_DTP__c - LYTD_C_C_plus_DTP__c )/LYTD_C_C_plus_DTP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TYTD vs LYTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_registration_No__c</fullName>
        <label>Tax registration No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_service_before_after_sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical service (before / after sales)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Level__c</fullName>
        <label>HD Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tinting_service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tinting service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Position__c</fullName>
        <label>Title/Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Actuals_TY__c</fullName>
        <formula>CC_TY1__c +  DTP_TY1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals TY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_Liquid_Sales__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Retail</inlineHelpText>
        <label>Total Behr Liquid Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_April__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales April</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_August__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales August</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_December__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales December</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_February__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales February</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_January__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales January</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_July__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales July</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_June__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales June</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_March__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales March</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_May__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_November__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales November</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_October__c</fullName>
        <label>Total Behr SO Sales October</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Behr_SO_Sales_September__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Behr SO Sales September</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales2__c</fullName>
        <label>Total Cash &amp; Carry Sales</label>
        <summarizedField>Opportunity.Total_POS_Sales__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_April__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales April</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_August__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales August</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_December__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales December</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_February__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales February</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_January__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales January</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_July__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales July</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_June__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales June</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_March__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales March</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_May__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_November__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales November</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_October__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales October</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Carry_Sales_September__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Total Cash &amp; Carry Sales September</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_DTP_Sales__c</fullName>
        <label>Total DTP Sales</label>
        <summarizedField>Opportunity.Total_DTP_Sales__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <formula>Total_DTP_Sales__c +  Total_Cash_Carry_Sales2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value_Bid_Opportunities__c</fullName>
        <label>Total Value - Bid Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Bid</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_sales_revenue__c</fullName>
        <label>Total sales revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Association_Affiliation__c</fullName>
        <label>Trade Association/Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>AAHOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH4R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAH - Colony American Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial PMCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience BehrPro Attendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD PAR Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD PPSS Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IREM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management Conversion Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProTect Painters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Union Painters (IUPAT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VYS - Vineyard Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Trade_Association_Name__c</fullName>
        <label>Trade Association Name</label>
        <picklist>
            <picklistValues>
                <fullName>CAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crawford Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNMAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIGP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ty_V_LY_Comp_DTP__c</fullName>
        <description>TY vs LY % comp (full year last year)</description>
        <formula>if(DTP_LY1__c=0,0,((DTP_LYTD1__c + DTP_TYTD1__c) - DTP_LY1__c )/DTP_LY1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ty V LY % Comp DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_Of_Dealer__c</fullName>
        <label>Type Of Dealer</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Focused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deco Focused</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tyson_Trial_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tyson Trial Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Units_Managed__c</fullName>
        <inlineHelpText>Related to Market Segment Propery Management</inlineHelpText>
        <label># Units Managed</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>2 -200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201 - 600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accoount Update Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOD_Active_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the account is a Web on Demand user</description>
        <label>WEB Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOD_Address__c</fullName>
        <description>URL address</description>
        <label>WEB Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Warehouse_sqm__c</fullName>
        <label>Warehouse (sqm)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1M_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if account has the prospect for a $1M + Project</inlineHelpText>
        <label>$1M + Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Store__c</fullName>
        <label>1st Store Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Store__c</fullName>
        <label>2nd Store Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Store__c</fullName>
        <label>3rd Store Open Date</label>
        <type>Date</type>
    </fields>
</CustomObject>